# NinjaODM

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prospector.yml  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: manage.py
app/api/: __init__.py  api.py  apps.py  exceptions.py  health_checks.py  sse.py  urls.py
app/api/auth/: apps.py  authenticators.py  controlers.py  nodeodm.py  schemas.py  service.py  services.py  share.py  user.py
app/api/constants/: odm.py  odm_client.py  token.py  user.py
app/api/controllers/: core.py  gcp.py  image.py  result.py  task.py  token.py  workspace.py
app/api/custom_auth/: apps.py
app/api/models/: gcp.py  image.py  mixins.py  result.py  task.py  workspace.py
app/api/permissions/: core.py  gcp.py  image.py  result.py  task.py  workspace.py
app/api/schemas/: core.py  gcp.py  image.py  odm_option.py  result.py  sse.py  task.py  token.py  tus.py  workspace.py
app/api/services/: gcp.py  image.py  result.py  task.py  token.py  workspace.py
app/api/tasks/: task.py  workspace.py
app/config/: __init__.py  asgi.py  celery.py  entrypoint.py  loguru_setup.py  urls.py  wsgi.py
app/config/settings/: main.py  utils.py
app/config/settings/mixins/: __init__.py  apps.py  auth.py  base.py  cache.py  celery.py  core.py  database.py  email.py  gis.py  i18n.py  jwt.py  logging.py  middleware.py  odm.py  security.py  static.py  templates.py  tus.py
app/core/: apps.py  exceptions.py  schemas.py  urls.py
app/core/models/: auth.py
scripts/: entrypoint.sh  healthcheck.sh  start.sh
tests/: auth_clients.py  conftest.py  factories.py
tests/e2e/: test_dummy.py
tests/integration/: test_01_auth.py  test_02_workspace.py  test_03_image.py  test_04_result.py  test_05_gcp.py  test_06_task.py  test_07_sse.py  test_08_tus_upload.py  test_09_nodeodm_client.py  test_10_celery_tasks.py  test_auth.py  test_dummy.py  test_gcp.py  test_image.py  test_images.py  test_odm.py  test_result.py  test_sse.py  test_task.py  test_tus_upload.py  test_workspace.py
tests/server_mocks/: __init__.py  base.py  utils.py
tests/server_mocks/nodeodm/: odm_utils.py  server.py
tests/unit/: test_01_auth.py  test_02_workspace.py  test_03_image.py  test_04_gcp.py  test_05_result.py  test_06_task.py  test_07_celery_tasks.py  test_07_nodeodm_client.py  test_08_celery_tasks.py  test_auth.py  test_gcp.py  test_image.py  test_odm.py  test_result.py  test_settings.py  test_task.py
tests/utils/: __init__.py  auth_clients.py  factories.py
tests/utils/crud/: __init__.py  config.py  models.py  runners.py  suites.py  utils.py
tests/utils/server_mocks/: base.py
tests/utils/server_mocks/nodeodm/: odm_utils.py
