# ==============================================================================
# Project Metadata
# ==============================================================================
[project]
name = "NinjaODM"
version = "0.1.0"
description = "NinjaODM GeoDjango Microservices Server"
authors = [{ name = "Eryk Srebrny", email = "esrebrny@onet.eu" }]
requires-python = ">=3.13,<3.14"

# ==============================================================================
# Pixi Configuration
# ==============================================================================
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.13.7,<3.14"

# ------------------------------------------------------------------------------
# Platform-Specific Dependencies
# ------------------------------------------------------------------------------
[tool.pixi.target.linux.dependencies]
gunicorn = ">=23.0.0"

# ------------------------------------------------------------------------------
# Django Feature
# ------------------------------------------------------------------------------
[tool.pixi.feature.django.dependencies]
django = ">=5.2.7,<6"
django-ninja = ">=1.4.3,<2"
dj-database-url = ">=2.1.0,<3"
pydantic = ">=2.11.9,<3"
pydantic-settings = ">=2.11.0,<3"
geojson-pydantic = ">=2.0.0,<3"
uvicorn = ">=0.37.0,<0.38"
django-cors-headers = ">=4.9.0,<5"
loguru = ">=0.7.3,<0.8"
psycopg = ">=3.2.9,<4"
pillow = ">=12.0.0,<13"
django-redis = ">=6.0.0,<7"

[tool.pixi.feature.django.pypi-dependencies]
django-easy-logging = ">=0.70,<0.71"
django-tus = ">=0.5.0,<0.6"
django-eventstream = ">=5.3.2,<6"
django-ninja-extra = ">=0.30.1,<0.31"
django-ninja-jwt = ">=5.3.9,<6"

# ------------------------------------------------------------------------------
# Geo Libraries
# ------------------------------------------------------------------------------
[tool.pixi.feature.geo-libs.dependencies]
proj = ">=9.7.0,<10"
gdal = ">=3.11.4,<4"
geos = ">=3.14.0,<4"

[tool.pixi.feature.geo-libs-dev.dependencies]
libspatialite = ">=5.1.0,<6"

# ------------------------------------------------------------------------------
# Testing
# ------------------------------------------------------------------------------
[tool.pixi.feature.test.dependencies]
factory_boy = ">=3.3.3,<4"
faker = ">=37.8.0,<38"
pytest = ">=8.4.2,<9"
pytest-cov = ">=7.0.0,<8"
pytest-django = ">=4.11.1,<5"
pytest-watch = ">=4.1.0,<5"
tuspy = ">=1.1.0,<2"
coverage = ">=7.0.0,<8"
pytest-asyncio = ">=1.3.0,<2"
httpx = ">=0.28.1,<0.29"
daphne = ">=4.2.1,<5"
fakeredis = ">=2.33.0,<3"

[tool.pixi.feature.test.pypi-dependencies]
pytest-factoryboy = ">=2.8.1,<3"

# ------------------------------------------------------------------------------
# Static Code Analysis
# ------------------------------------------------------------------------------
[tool.pixi.feature.static-code-analysis.pypi-dependencies]
ruff = ">=0.9.0,<1"
mypy = ">=1.13.0,<2"
django-stubs = ">=5.2.5,<6"

# ------------------------------------------------------------------------------
# Miscellaneous
# ------------------------------------------------------------------------------
[tool.pixi.feature.miscellaneous.dependencies]
httpie = ">=3.2.4,<4"
pre-commit = ">=4.3.0,<5"

# ------------------------------------------------------------------------------
# Environments
# ------------------------------------------------------------------------------
[tool.pixi.environments]
prod = ["django", "geo-libs"]
dev = ["django", "geo-libs", "geo-libs-dev", "static-code-analysis", "test", "miscellaneous"]
test = ["django", "geo-libs-dev", "static-code-analysis", "test"]

# ==============================================================================
# Pixi Tasks - Django
# ==============================================================================
[tool.pixi.tasks."django:manage"]
description = "Run Django management command"
cmd = ["python", "./app/manage.py"]

[tool.pixi.tasks."django:admin"]
description = "Show Django Admin CLI"
cmd = ["django-admin"]

# ==============================================================================
# Pixi Tasks - Bash Scripts
# ==============================================================================
[tool.pixi.tasks."scripts:runserver"]
description = "Run server based on $ENVIRONMENT"
args = [{ arg = "env", default = "prod" }]
cmd = ["./scripts/start.sh", "{{ arg }}"]

[tool.pixi.tasks."scripts:healthcheck"]
cmd = ["./scripts/healthcheck.sh"]

# ==============================================================================
# Pixi Tasks - Docker Compose
# ==============================================================================
[tool.pixi.tasks."compose:up"]
description = "Start services with docker-compose"
args = [
  { arg = "env", default = "prod" },
  { arg = "port", default = "8000" },
]
cmd = [
  "docker", "compose", "-p", "ninjaodm-{{ env }}", "up", "-d", "--build", "app-{{ env }}"
]
env = { ENVIRONMENT = "{{ env }}", PORT = "{{ port }}" }

# ==============================================================================
# Stop services for each environment (same for prod, dev, test)
[tool.pixi.tasks."compose:down"]
description = "Stop services"
args = [{ arg = "env", default = "prod" }]
cmd = [
  "docker", "compose", "-p", "ninjaodm-{{ env }}", "down", "-v",
]

# ==============================================================================
# Show service logs
[tool.pixi.tasks."compose:logs"]
description = "Show service logs"
cmd = [
  "docker", "compose", "-p", "ninjaodm-{{ env }}", "logs", "-f",
]

# ==============================================================================
# Show running services
[tool.pixi.tasks."compose:ps"]
description = "Show running services"
cmd = [
  "docker", "compose", "-p", "ninjaodm-{{ env }}", "ps",
]

# ==============================================================================
# Restart services (specifically for app-{{ env }} service)
[tool.pixi.tasks."compose:restart"]
description = "Restart app-{{ env }} service"
args = [{ arg = "env", default = "prod" }]
cmd = [
  "docker", " compose", "-p", "ninjaodm-{{ env }}", "restart",
  "app-{{ env }}",  # This restarts the app-specific service for the environment
]


# ==============================================================================
# Pixi Tasks - Testing
# ==============================================================================
[tool.pixi.tasks.test]
description = "Run all tests in order (unit → integration → e2e)"
depends-on = ["test:unit", "test:integration", "test:e2e"]

[tool.pixi.tasks."test:watch"]
description = "Watch and run tests"
cmd = ["ptw", "--", "-vv"]
env = { DJANGO_SETTINGS_MODULE = "app.config.entrypoint", ENVIRONMENT = "test" }

[tool.pixi.tasks."test:unit"]
description = "Run unit tests only"
cmd = ["pytest", "tests/unit/", "-v"]
env = { DJANGO_SETTINGS_MODULE = "app.config.entrypoint", ENVIRONMENT = "test" }

[tool.pixi.tasks."test:integration"]
description = "Run integration tests only"
cmd = ["pytest", "tests/integration/", "-v"]
env = { DJANGO_SETTINGS_MODULE = "app.config.entrypoint", ENVIRONMENT = "test" }

[tool.pixi.tasks."test:e2e"]
description = "Run e2e tests only"
cmd = ["pytest", "tests/e2e/", "-v"]
env = { DJANGO_SETTINGS_MODULE = "app.config.entrypoint", ENVIRONMENT = "test" }

[tool.pixi.tasks."test:coverage"]
description = "Run tests with coverage"
cmd = [
    "sh",
    "-c",
    "coverage run -m pytest tests/unit/ tests/integration/ tests/e2e/ && coverage report && coverage html",
]
env = { DJANGO_SETTINGS_MODULE = "app.config.entrypoint", ENVIRONMENT = "test" }

[tool.pixi.tasks."test:coverage:unit"]
description = "Coverage for unit tests only"
cmd = ["sh", "-c", "coverage run -m pytest tests/unit/ && coverage report"]
env = { DJANGO_SETTINGS_MODULE = "app.config.entrypoint", ENVIRONMENT = "test" }

[tool.pixi.tasks."test:coverage:report"]
description = "Show coverage report"
cmd = ["coverage", "report"]

[tool.pixi.tasks."test:coverage:html"]
description = "Generate HTML coverage report"
cmd = ["coverage", "html"]

[tool.pixi.tasks."test:clean"]
description = "Clean test artifacts"
cmd = [
    "sh",
    "-c",
    "rm -rf .pytest_cache htmlcov .coverage && find . -type d -name '__pycache__' -exec rm -rf {} + 2>/dev/null || true",
]

[tool.pixi.tasks."test:ci"]
description = "Run all tests sequentially (CI mode)"
cmd = [
    "sh",
    "-c",
    "pytest tests/unit/ -v --tb=short && pytest tests/integration/ -v --tb=short && pytest tests/e2e/ -v --tb=short",
]
env = { DJANGO_SETTINGS_MODULE = "app.config.entrypoint", ENVIRONMENT = "test" }

# ==============================================================================
# Pixi Tasks - Code Quality
# ==============================================================================
[tool.pixi.tasks."code-quality:format"]
description = "Format code with ruff (replaces black + isort)"
cmd = ["ruff", "format", "app", "tests"]

[tool.pixi.tasks."code-quality:lint"]
description = "Lint code with ruff (replaces prospector + bandit + flake8 + everything)"
cmd = ["ruff", "check", "--fix", "app", "tests"]

[tool.pixi.tasks."code-quality:typecheck"]
description = "Run type checking with mypy"
cmd = ["mypy", "app"]

[tool.pixi.tasks."code-quality:all"]
description = "Run format + lint + typecheck (CI uses this)"
depends-on = ["code-quality:format", "code-quality:lint", "code-quality:typecheck"]

# ==============================================================================
# Pixi Tasks - Pre-commit (with pre-push support)
# ==============================================================================
[tool.pixi.tasks."pre-commit:install"]
description = "Install pre-commit hooks (on commit)"
cmd = ["pre-commit", "install"]

[tool.pixi.tasks."pre-commit:install-push"]
description = "Install pre-push hooks"
cmd = ["pre-commit", "install", "--hook-type", "pre-push"]

[tool.pixi.tasks."pre-commit:install-all"]
description = "Install both pre-commit and pre-push hooks"
depends-on = ["pre-commit:install", "pre-commit:install-push"]

[tool.pixi.tasks."pre-commit:uninstall"]
description = "Uninstall all pre-commit hooks"
cmd = ["sh", "-c", "pre-commit uninstall && pre-commit uninstall --hook-type pre-push"]

[tool.pixi.tasks."pre-commit:run"]
description = "Run pre-commit on all files"
cmd = ["pre-commit", "run", "--all-files"]

[tool.pixi.tasks."pre-commit:run-staged"]
description = "Run pre-commit on staged files only"
cmd = ["pre-commit", "run"]

[tool.pixi.tasks."pre-commit:run-push"]
description = "Run pre-push hooks (simulated)"
cmd = ["pre-commit", "run", "--hook-stage", "push", "--all-files"]

[tool.pixi.tasks."pre-commit:update"]
description = "Update pre-commit hooks to latest versions"
cmd = ["pre-commit", "autoupdate"]

[tool.pixi.tasks."pre-commit:clean"]
description = "Clean pre-commit cache"
cmd = ["pre-commit", "clean"]

[tool.pixi.tasks."pre-commit:gc"]
description = "Garbage collect pre-commit cache"
cmd = ["pre-commit", "gc"]

# ==============================================================================
# Pixi Tasks - Utilities
# ==============================================================================
[tool.pixi.tasks."utils:generate-secret"]
description = "Generate a new Django secret key"
cmd = [
    "python",
    "-c",
    "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())",
]

[tool.pixi.tasks."utils:req"]
description = "Send HTTP request to development server"
args = [
    { arg = "method", default = "GET" },
    { arg = "host", default = "localhost" },
    { arg = "port", default = "8000" },
    { arg = "path", default = "" },
]
cmd = ["http", "{{ method }}", "{{ host }}:{{ port }}/{{ path }}"]

[tool.pixi.tasks.clean]
description = "Clean all artifacts and cache files"
cmd = [
    "sh",
    "-c",
    "rm -rf .pytest_cache htmlcov .coverage .mypy_cache .ruff_cache && find . -type d -name '__pycache__' -exec rm -rf {} + 2>/dev/null || true",
]

# ==============================================================================
# Pytest Configuration
# ==============================================================================
[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--strict-markers", "--reuse-db", "-v", "-x"]
DJANGO_SETTINGS_MODULE = "app.config.entrypoint"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore:Support for class-based `config`:DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.pytest-watch]
directories = ["app", "tests"]
args = ["tests/"]
clear = true

# ==============================================================================
# Coverage Configuration
# ==============================================================================
[tool.coverage.run]
source = ["app"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/settings/*",
    "*/manage.py",
    "*/wsgi.py",
    "*/asgi.py",
    "*/apps.py",
    "*/admin.py",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    'class .*\bProtocol$:',
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ==============================================================================
# MyPy Configuration
# ==============================================================================
[tool.mypy]
python_version = "3.13"
strict = false
plugins = [
    "mypy_django_plugin.main",
    "pydantic.mypy",
]
warn_unused_configs = true
disallow_untyped_decorators = false
exclude = [
  "migrations",
  ".pixi",
  "app/manage.py",
  "app/.*/migrations/.*",
  "app/config",
  "app/tests"
]

[tool.django-stubs]
django_settings_module = "app.config.entrypoint"

[dependency-groups]
django = ["ninja-schema>=0.14.3,<0.15"]
