[project]
name = "NinjaODM"
version = "0.1.0"
description = "NinjaODM GeoDjango Microservices Server"
authors = [{ name = "Eryk Srebrny", email = "esrebrny@onet.eu" }]
requires-python = "<3.13"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.target.linux.dependencies]
gunicorn = ">=23.0.0"

[tool.pixi.feature.django.dependencies]
django = ">=5.2.7,<6"
dj-database-url = ">=2.1.0,<3"
pydantic = ">=2.11.9,<3"
pydantic-settings = ">=2.11.0,<3"
geojson-pydantic = ">=2.0.0,<3"
uvicorn = ">=0.37.0,<0.38"
django-cors-headers = ">=4.9.0,<5"
loguru = ">=0.7.3,<0.8"
psycopg = ">=3.2.9,<4"
pillow = ">=12.0.0,<13"
django-redis = ">=6.0.0,<7"
celery = ">=5.5.3,<6"

[tool.pixi.feature.django.pypi-dependencies]
django-ninja = "==1.5.1"
django-ninja-extra = "==0.30.8"
django-ninja-jwt = ">=5.3.9,<6"
django-easy-logging = ">=0.70,<0.71"
django-tus = "==0.5.0"
django-appconf = "==1.2.0"
pyodm = ">=1.5.12,<2"

[tool.pixi.feature.geo-libs.dependencies]
proj = ">=9.7.0,<10"
gdal = ">=3.11.4,<4"
geos = ">=3.14.0,<4"

[tool.pixi.feature.geo-libs-extra.dependencies]
libspatialite = ">=5.1.0,<6"

[tool.pixi.feature.test.dependencies]
factory_boy = ">=3.3.3,<4"
faker = ">=37.8.0,<38"
pytest = ">=8.4.2,<9"
pytest-cov = ">=7.0.0,<8"
pytest-django = ">=4.11.1,<5"
tuspy = ">=1.1.0,<2"
pytest-asyncio = ">=1.3.0,<2"
httpx = ">=0.28.1,<0.29"
daphne = ">=4.2.1,<5"
fakeredis = ">=2.33.0,<3"
pytest-freezegun = ">=0.4.2,<0.5"
pytest-httpserver = ">=1.1.3,<2"

[tool.pixi.feature.test.pypi-dependencies]
pytest-factoryboy = ">=2.8.1,<3"

[tool.pixi.feature.static-code-analysis.pypi-dependencies]
ruff = ">=0.9.0,<1"
mypy = ">=1.13.0,<2"
django-stubs = ">=5.2.5,<6"

[tool.pixi.feature.miscellaneous.dependencies]
pre-commit = ">=4.3.0,<5"

[tool.pixi.environments]
prod = ["django", "geo-libs"]
dev = ["django", "geo-libs", "geo-libs-extra", "static-code-analysis", "test", "miscellaneous"]
test = ["django", "geo-libs", "geo-libs-extra", "static-code-analysis", "test"]

[tool.pixi.tasks."django:manage"]
description = "Run Django management command"
cmd = ["python", "./app/manage.py"]

[tool.pixi.tasks."django:admin"]
description = "Show Django Admin CLI"
cmd = ["django-admin"]

[tool.pixi.tasks."scripts:runserver"]
cmd = ["./scripts/start.sh"]

[tool.pixi.tasks.test]
description = "Run all tests in order (unit → integration → e2e)"
depends-on = ["test:unit", "test:integration", "test:e2e"]

[tool.pixi.tasks."test:unit"]
description = "Run unit tests only"
cmd = ["pytest", "tests/unit/", "-v"]
env = { ENVIRONMENT = "test" }

[tool.pixi.tasks."test:integration"]
description = "Run integration tests only"
cmd = ["pytest", "tests/integration/", "-v"]
env = { ENVIRONMENT = "test" }

[tool.pixi.tasks."test:e2e"]
description = "Run e2e tests only"
cmd = ["pytest", "tests/e2e/", "-v"]
env = { ENVIRONMENT = "test" }

[tool.pixi.tasks."code-quality:format"]
description = "Format code with ruff"
cmd = ["ruff", "format", "app", "tests"]

[tool.pixi.tasks."code-quality:lint"]
description = "Lint code with ruff"
cmd = ["ruff", "check", "--fix", "app", "tests"]

[tool.pixi.tasks."code-quality:typecheck"]
description = "Run type checking with mypy"
cmd = ["mypy", "app"]

[tool.pixi.tasks."code-quality:all"]
description = "Run format + lint + typecheck"
depends-on = ["code-quality:format", "code-quality:lint", "code-quality:typecheck"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--strict-markers", "--reuse-db", "-v", "-x"]
DJANGO_SETTINGS_MODULE = "app.config.entrypoint"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*",
    "ignore:Support for class-based `config`:DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]


[tool.mypy]
python_version = "3.12"
strict = false
plugins = [
    "mypy_django_plugin.main",
    "pydantic.mypy",
]
warn_unused_configs = true
disallow_untyped_decorators = false
exclude = [
  "migrations",
  ".pixi",
  "app/manage.py",
  "app/.*/migrations/.*",
  "app/config",
  "app/tests"
]

[tool.django-stubs]
django_settings_module = "app.config.entrypoint"

[dependency-groups]
django = ["ninja-schema>=0.14.3,<0.15"]
